# cad

./: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.orca-profiles-local/: README.md
.orca-profiles-local/BBL/machine/: Bambu Lab A1 0.4 nozzle.json
.orca-profiles-local/BBL/process/: 0.20mm Standard @BBL A1.json
docs/: FINAL_RESULTS.md
lib/: hex_grid.scad
projects/hex-cube/: hex_cube.scad
projects/rack/: README.md  apple_tv_retention_bracket.scad  apple_tv_slot_alignment_test.scad  rack_shelf_apple_tv_mount.scad  retention_bracket_lib.scad  retention_strap.scad  shelf_constants.scad  shelf_slot_constants.scad  slot_alignment_test.scad  vented_rack_shelf.scad  vented_rack_shelf_reference.scad  wiim_amp_retention_bracket.scad  wiim_amp_slot_alignment_test.scad
projects/rack-shelf-apple-tv-mount/: README.md  rack_shelf_apple_tv_mount.scad
projects/rack/tests/: slot_alignment_test.scad
projects/test/: test_cube.scad
scripts/: __init__.py  cached_render.sh  cached_slice.sh  customizer_lint.py  scad_tools.py
site/: app.js  index.html  style.css
