[project]
name = "cad-tools"
version = "0.1.0"
description = "OpenSCAD CAD project tools including MakerBot Customizer linting"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-openscad",
]

[project.scripts]
scad-tools = "scripts.scad_tools:cli"
customizer-lint = "scripts.customizer_lint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
]

[tool.uv.sources]
tree-sitter-openscad = { git = "https://github.com/openscad/tree-sitter-openscad" }
